Replacing get(0) to getFirst() in Java Util